PT-1994: Print pedigree Added a pedigree print dialog/ability to print pedigrees. Also fixes visible editor-mode only symbols (e.g. node shading) visible in saved pedigree images.

--- a/components/pedigree/resources/src/main/resources/pedigree/editor.css
+++ b/components/pedigree/resources/src/main/resources/pedigree/editor.css
@@ -791,37 +791,68 @@
 }
 
 .msdialog-modal-container .pedigree-template-chooser {
-    width: 720px;
+  width: 720px;
 }
+
+.msdialog-modal-container .pedigree-print-dialog {
+  width: 750px !important;
+  max-width: 750px !important;
+}
+.print-preview-header {
+  display: flex;
+  margin-bottom: 10px;
+}
+.print-preview-footer {
+  margin-top: 8px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  margin-right: 25px;
+}
+.print-zoom-value {
+  display: inline-block;
+  width: 45px;
+  height: 25px;
+  text-align: center;
+  margin-right: 5px;
+  margin-left: 5px;
+}
+.print-zoom-button {
+  width:25px;
+  height:25px;
+}
+.print-zoom-minus-button {
+  margin-left: 10px;
+}
+
 .picture-box {
-    display: inline-block;
-    box-shadow: rgba(0, 0, 0, 0.5) 0 0 5px 2px;
-    margin: 14px;
+  display: inline-block;
+  box-shadow: rgba(0, 0, 0, 0.5) 0 0 5px 2px;
+  margin: 14px;
 }
 .picture-box:hover {
-    cursor: pointer;
-    box-shadow: rgba(0, 10, 0, 0.5) 0 0 5px 4px;
+  cursor: pointer;
+  box-shadow: rgba(0, 10, 0, 0.5) 0 0 5px 4px;
 }
 
 .template-picture-container {
-    display: inline-block;
-    margin: 3px;
+  display: inline-block;
+  margin: 3px;
 }
 
 .msdialog-box {
-    /*overflow:auto;*/
-    width: 60% !important;
-    min-width: 650px !important;
-    max-width: 720px !important;
+  /*overflow:auto;*/
+  width: 60% !important;
+  min-width: 650px !important;
+  max-width: 720px !important;
 }
 .msdialog-box .content {
-    text-align: center;
+  text-align: center;
 }
 .pedigree-okcancel {
-    width: 680px !important;
+  width: 680px !important;
 }
 .no-mouse-interaction {
-    pointer-events: none;
+  pointer-events: none;
 }
 /* Make sure the tooltips fit nicely in the suggest box in the pedigree editor: */
 .suggestItem .xTooltip {
